Fix: Restore missing main.js reference

--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
     <div id="app"></div>
     <!-- Scripts relative to www/ folder -->
     <script src="src/utils/storage.js"></script>
+    <script src="src/main.js"></script>
     <script>
         // PWA Service Worker Registration
         if ('serviceWorker' in navigator) {
